<resources>
    <string name="app_name">EcoMoving</string>
    <string name="login_user">User</string>
    <string name="login_password">Password</string>
    <string name="iv_logo_description">EcoMovingLogo</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Log in</string>
    <string name="userformat">user@example.com</string>
    <string name="passwordformat">Example123$</string>
    <string name="copyright">©IgnacioHolguínBallesteros</string>
    <string name="youtube">YouTube</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="save">Save</string>
    <string name="focus">Focus</string>
    <string name="marcador">Marker</string>
    <string name="cancel">Cancel</string>
    <string name="calculate">Calculate</string>
    <string name="origin_point">Punto de origen</string>
    <string name="gps">GPS</string>
    <string name="locations">Locations</string>
    <string name="description">Description</string>
    <string name="drop_database">Drop database</string>
    <string name="accept">Accept</string>
</resources>