<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/youtube"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/youtube_logo"
        android:layout_marginHorizontal="10dp"
        android:contentDescription="@string/youtube" />

    <ImageView
        android:id="@+id/twitter"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/twitter_logo"
        android:layout_marginHorizontal="10dp"
        android:contentDescription="@string/twitter"/>

    <ImageView
        android:id="@+id/intagram"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/instagram_logo"
        android:layout_marginHorizontal="10dp"
        android:contentDescription="@string/instagram"/>

    <ImageView
        android:id="@+id/linkedin"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@mipmap/linkedin_logo"
        android:layout_marginHorizontal="10dp"
        android:contentDescription="@string/linkedin"/>

</LinearLayout>