<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".journey.MapsActivity">

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_views"/>

    <LinearLayout
        android:id="@+id/text_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map"
        app:layout_constraintBottom_toTopOf="@id/buttons">

        <TextView
            android:id="@+id/origin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Punto de origen"
            android:layout_margin="5dp"
            android:padding="2dp"/>
        <TextView
            android:id="@+id/destiny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Punto de destino"
            android:layout_margin="5dp"
            android:padding="2dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/ecomoving_darkgreen"
            android:text="@string/save"
            app:cornerRadius="15dp"
            android:visibility="gone"/>
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/ecomoving_darkgreen"
            android:text="@string/cancel"
            app:cornerRadius="15dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_focus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/ecomoving_darkgreen"
            android:onClick="focusOnUser"
            android:text="@string/focus"
            app:cornerRadius="15dp"/>

        <Button
            android:id="@+id/button_addMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:backgroundTint="@color/ecomoving_darkgreen"
            android:onClick="addMarker"
            android:text="@string/marcador"
            app:cornerRadius="15dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>